--- a/learning/2 Nodejs/package.json
+++ b/learning/2 Nodejs/package.json
@@ -3,7 +3,8 @@
     "@babel/cli": "^7.17.0",
     "@babel/core": "^7.17.2",
     "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.11"
+    "@babel/preset-env": "^7.16.11",
+    "koa": "^2.13.4"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
