--- a/10-HTTP/level2-koa（未完成）/package.json
+++ b/10-HTTP/level2-koa（未完成）/package.json
@@ -2,7 +2,10 @@
   "devDependencies": {
     "express": "^4.17.3",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-compose": "^4.1.0",
     "koa-route": "^3.2.0",
+    "koa-session": "^6.2.0",
     "koa-static": "^5.0.0"
   }
 }
