--- a/learning/2 Nodejs/4 koa/package.json
+++ b/learning/2 Nodejs/4 koa/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "koa": "^2.13.4",
+    "koa-body": "^4.2.0",
     "koa-compose": "^4.1.0",
     "koa-route": "^3.2.0",
     "koa-static": "^5.0.0"
